--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -359,6 +359,51 @@ $(document).ready(function(){
     </div>
 </section>
 
+<section class="about-info-section">
+    <div class="container">
+        <div class="info-row">
+            <div class="flex-wrap">
+ 
+                <div class="news--wrapper">
+                    <div class="wrap-news-box">
+                        <input id="Id1" type="radio" name="yes" checked>
+                        <label for="Id1">
+                            <h4>Incomet team met <br /><strong>Nasdaq Dubai</strong> to discuss on global financial literacy</h4>
+                        </label>
+                        <div class="col-6 col-sm-12 news-image">
+                            <img src="../images/nasdaq-image.jpg" alt="Image" />
+                        </div>
+                    </div>
+                    <div class="wrap-news-box">
+                        <input id="Id2" type="radio" name="yes">
+                        <label for="Id2">
+                            <h4>Incomet Founder & CEO received <strong>HBF Edtech & Entrepreneurs Award</strong> from <strong>Mr. Ajay Thakur</strong> (BseSme Head)</h4>
+                        </label>
+                        <div class="col-6 col-sm-12 news-image">
+                            <img src="../images/HBF-award.jpeg" alt="Image" />
+                        </div>
+                    </div>
+                    <div class="wrap-news-box">
+                        <input id="Id3" type="radio" name="yes">
+                        <label for="Id3">
+                            <h4>Incomet mentor <br /><strong>Mr. Chirag Bansal</strong> was live on <strong>NDTV</strong> with top politicians and economists to discuss about Inflation and economy</h4>
+                        </label>
+                        <div class="col-6 col-sm-12 news-image">
+                            <img src="../images/news-image.jpg" alt="Image" />
+                        </div>
+                    </div>
+                </div>
+                  
+                <div class="col-5 col-sm-12">
+                    <h4></h4>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+
 <section class="information-section">
     <div class="container">
         <div class="flex-wrap">
