--- a/pages/blog.html
+++ b/pages/blog.html
@@ -122,7 +122,7 @@
             <div class="flex-wrap blog-wrapper">
                 <div class="col-4 post-dvl">
                     <div class="post-img bgimage" style="background-image: url(../images/about-banner.jpg);"><a href="#"></a></div>
-                    <h4><a href="#">The Complete SIP Guide</a></h4>
+                    <h4><a href="#">The Complete SIP GuideThe Complete SIP Guide</a></h4>
                     <span class="line"></span>
                     <p>Just decided to take the first step towards a secure financial future? Confused where to begin? The Incomet SEP can be a great start!</p>
                     <div class="ctmbtn">
@@ -133,7 +133,7 @@
                     <div class="post-img bgimage" style="background-image: url(../images/about-banner.jpg);"><a href="#"></a></div>
                     <h4><a href="#">The Complete SIP Guide</a></h4>
                     <span class="line"></span>
-                    <p>Just decided to take the first step towards a secure financial future? Confused where to begin? The Incomet SEP can be a great start!</p>
+                    <p>Just decided to take the first step towards a secure financial future? Confused where to begin? The Incomet SEP can be a great start!Just decided to take the first step towards a secure financial future? Confused where to begin? The Incomet SEP can be a great start!</p>
                     <div class="ctmbtn">
                         <a href="#">Read More</a>
                     </div>
@@ -158,8 +158,8 @@
             <div class="flex-wrap blog-wrapper">
                 <div class="col-4 post-dvl">
                     <div class="post-img bgimage" style="background-image: url(../images/about-banner.jpg);"><a href="#"></a></div>
-                    <h4><a href="#">The Complete SIP Guide</a></h4>
-                    <p>Just decided to take the first step towards a secure financial future? Confused where to begin? The Incomet SEP can be a great start!</p>
+                    <h4><a href="#">The Complete SIP Guide The Complete SIP Guide</a></h4>
+                    <p>Just decided to take the first step towards a secure financial future? Confused where to begin? The Incomet SEP can be a great start! secure financial future?</p>
                     <div class="ctmbtn">
                         <a href="#">Read More</a>
                     </div>
@@ -191,7 +191,7 @@
         <div class="flex-wrap blog-wrapper">
             <div class="col-3 post-dvl">
                 <div class="post-img bgimage" style="background-image: url(../images/about-banner.jpg);"><a href="#"></a></div>
-                <h4><a href="#">The Complete SIP Guide</a></h4>
+                <h4><a href="#">The Complete SIP Guide The Complete SIP Guide</a></h4>
                 <p>Just decided to take the first step towards a secure financial future? Confused where to begin? The Incomet SEP can be a great start!</p>
                 <div class="ctmbtn">
                     <a href="#">Read More</a>
