--- a/pages/traders-club.html
+++ b/pages/traders-club.html
@@ -181,85 +181,85 @@
         </div>
         <div class="flex-wrap">
             <div class="week-wrap">
-                <h5>Week 1</h5>
+                <h5><div><span>1</span>Week</div></h5>
                 <div class="week-text">
                 <p>At Incomet and Stock Market, mindset is very important. During the first week, we make sure that all of our students think in line with the right perspective and we all are on the same page so that the same goal can be achieved.</p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 2</h5>
+                <h5><div><span>2</span>Week</div></h5>
                 <div class="week-text">
                 <p>Students achieve the basic understanding of the market, start possessing the SMART goal for their journey, and learn the roadmap to achieve.</p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 3</h5>
+                <h5><div><span>3</span>Week</div></h5>
                 <div class="week-text">
                 <p>: Students are taught what not to do in the market, this is where basic knowledge is inculcated with smart trading processes, with a purpose to teach what not to do in the market and how not to make a loss. </p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 4</h5>
+                <h5><div><span>4</span>Week</div></h5>
                 <div class="week-text">
                 <p>Learning of technical analysis and data driven strategies take place, this is a week of crucial learning and live trading with small capital. </p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 5</h5>
+                <h5><div><span>5</span>Week</div></h5>
                 <div class="week-text">
                 <p>We move the students from a small swimming pool to the ocean, and achieve derivative knowledge. By this week students are ready to tap into the big boys club.</p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 6</h5>
+                <h5><div><span>6</span>Week</div></h5>
                 <div class="week-text">
                 <p>Data driven strategies have been taught for trading in the market and practice of derivatives is done together in live markets. </p>
                 </div>
             </div>
             <div class="week-wrap">
-                <h5>Week 7</h5>
+                <h5><div><span>7</span>Week</div></h5>
                 <div class="week-text">
                 <p>: Students are capable enough to mint 1-2k a day and are under the full time guidance of the mentor to correct the mistakes and focus most on their strong capabilities. </p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 8</h5>
+                <h5><div><span>8</span>Week</div></h5>
                 <div class="week-text">
                 <p>Advance technical learning module, special system generation becomes the main objective and individual set up is being created for every student with the help of the mentor. By this time students are capable of minting 2-3k a day. </p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 9</h5>
+                <h5><div><span>9</span>Week</div></h5>
                 <div class="week-text">
                 <p>Learning of investing journey, fundamental analysis, Multibagger look outs, and false alarm strategies are taught! </p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 10</h5>
+                <h5><div><span>10</span>Week</div></h5>
                 <div class="week-text">
                 <p>Special learning module to uplift the trader and make them more confident in their money minting skills! </p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 11</h5>
+                <h5><div><span>11</span>Week</div></h5>
                 <div class="week-text">
                 <p>Completion of special learning modules and as this week ends students are capable of generating 5-7k a day.</p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 12</h5>
+                <h5><div><span>12</span>Week</div></h5>
                 <div class="week-text">
                 <p>Advance technical analysis strategies and Incomet option selling program is covered during this week. </p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 13</h5>
+                <h5><div><span>13</span>Week</div></h5>
                 <div class="week-text">
                 <p>To reach maximum potential, specific strategies suited best for corporate employees, businessmen and students are taught to make maximum ROI with limited funds.</p>
                 </div>
             </div>
              <div class="week-wrap">
-                <h5>Week 14</h5>
+                <h5><div><span>14</span>Week</div></h5>
                 <div class="week-text">
                 <p>By this week, we achieve psychology and sentiment learning, and achieve control over the mindset and emotions to create a bot type but flexible specialized system. </p>
                 </div>
@@ -318,7 +318,7 @@
                         </div>
                         <div class="award-text">
                             <div class="link-title">Call to ask any question</div>
-                            <div class="linkbox"><a href="#" title="Call">000 000 0000</a></div>
+                            <div class="linkbox"><a href="tel:+918860059273" title="Call">+91-8860059273</a></div>
                         </div>
                     </div>
                 </div>
@@ -329,7 +329,7 @@
                         </div>
                         <div class="award-text">
                             <div class="link-title">Email for any Query</div>
-                            <div class="linkbox"><a href="#" title="Email">test@gmail.com</a></div>
+                            <div class="linkbox"><a href="mailto:info@incomet.in" title="Email">info@incomet.in</a></div>
                         </div>
                     </div>
                 </div>                
